added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,69 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>Elements in the head include:</li>
+            <ul>
+              <li>title - title of the webpage</li>
+              <li>style - defines CSS style</li>
+              <li>base - defines base URL</li>
+              <li>meta - defines various metadata including character set, descrition, keywords, author, and viewport</li>
+              <li>script - embeds client-side scripts in HTML doc</li>
+            </ul>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>Elements in the body include:</li>
+            <ul>
+              <li>header is at the top of the page, usually with navigation menu and/or intro content</li>
+              <li>h1 through h6 - header</li>
+              <li>section - helps create sections</li>
+              <li>p - paragraph or block of text</li>
+              <li>ul (bulleted list), ol (numbered list), and li (list items) - these can even be nested! ;P</li>
+              <li>img - image, with scr = location of image, and alt = text string to describe appearance and functionality of image</li>
+              <li>br - creates a line of empty space</li>
+              <li>hyperlinks using "a" - creates the link to a webpage with href pointing to the URL</li>
+              <li>footer - at the bottom of the page</li>
+            </ul>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+
+        <ul>
+          <li>Enter your CSS notes here.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        
+        <ul>
+          <li>Enter your Git notes here.</li>
+          <li>Basic Git Commands:</li>
+            <ul>
+              <li>git status = shows which branch I am in</li>
+              <li>Add a branch and switch to it: git checkout -b BRANCH-NAME</li>
+              <li>checkout moves you to the new working branch</li>
+              <li>-b flags the new branch</li>
+              <li>git add -A = add mod to current working branch, -A adds all current changes</li>
+              <li>git commit -m "name of what to commit"</li>
+              <li>git pull origin main = pulls down any changes to main branch (ALWAYS do this before starting work.)</li>
+              <li>git push origin BRANCH-NAME - pushes your branch</li>
+              <li>git checkout main = goes back to main branch</li>
+            </ul>
+        </ul>
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+
+        <ul>
+          <li>Enter your JavaScript notes here.</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
