added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -44,7 +45,23 @@
         <h2>CSS</h2>
 
         <ul>
-          <li>Enter your CSS notes here.</li>
+          <li>CSS is used to add style to your site.</li>
+          <li>There are 3 ways to style with CSS:</li>
+            <ul>
+              <li>Inline CSS: directly in HTML code.  This is a quick and permanent change, but is less flexible than other options.</li>
+              <li>Internal CSS: this is added within the head of the HTML code.  These styles apply to just that page.</li>
+              <li>External CSS: allows for all styling to be in one place.  Makes changes easier. Link it to the page.</li>
+            </ul>
+          <li>CSS rules consist of a selector, property, and value, written as: "selector {property: value;}"
+            <ul>
+              <li>An "*" as the selector applies to ALL elements on a page.</li>
+              <li>A "." applies to the class selector.  Ie. ".card"</li>
+              <li>Use a comma to combine multiple selectors for the same criteria.</li>
+            </ul>
+          </li>
+          <li>A margin indicates how much space we want waround the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Other properties include: display, text-align, font size, background-color, etc.</li>
         </ul>
       </section>
 
@@ -52,7 +69,6 @@
         <h2>Git</h2>
         
         <ul>
-          <li>Enter your Git notes here.</li>
           <li>Basic Git Commands:</li>
             <ul>
               <li>git status = shows which branch I am in</li>
