added more JavaScript to project

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
+          <li>Files use .html extension.</li>
           <li>The head element contains information about the webpage.</li>
           <li>Elements in the head include:</li>
             <ul>
@@ -46,6 +47,7 @@
         <h2>CSS</h2>
 
         <ul>
+          <li>Files use .css extension.</li>
           <li>CSS is used to add style to your site.</li>
           <li>There are 3 ways to style with CSS:</li>
             <ul>
@@ -89,7 +91,44 @@
         <h2>JavaScript</h2>
 
         <ul>
-          <li>Enter your JavaScript notes here.</li>
+          <li>Files use .js.</li>
+          <li>**JavaScript is case sensitive.**</li>
+          <li>JS allows users to interact with a website.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+            <ul>
+              <li>Declare a variable with a 'let' keyword followed by the name you give the variable.</li>
+              <li>After declaring a vairable, you need to give it a value.</li>
+              <li>Both can be done at once with: 'let myVariable = "Natalie";'</li>
+              <li>It is good practice to end each statement with a ;</li>
+              <li>Retreive value by calling the variable name: myVariable;</li>
+              <li>Types of variables:</li>
+                <ul>
+                  <li>String: text - use "" or '' to signify.</li>
+                  <li>Number: exactly that - does not need "".</li>
+                  <li>Boolean: true or false - also doesn't need "".</li>
+                  <li>Array: a structure that allows you to store multiple values in a single reference.</li>
+                  <li>Object: can be anything, including all of the above.</li>
+                  </ul>
+            </ul>
+          <li>To add a comment, being with /* and end with */.</li>
+            <ul>
+              <li>A comment is a snippet of text you can add along with code.  The browser will ignore it.</li>
+              <li>You can "comment out" code within JS so you don't have to delete all of your work.</li>
+            </ul>
+          <li>Operators are math symbols that produce a result based on 2 values.</li>
+            <ul>
+              <li>Addition (+)</li>
+              <li>Subtraction (-), Multiplication (*), Division (/)</li>
+              <li>Assignment (=)</li>
+              <li>Strict Equals (===)</li>
+              <li>Not (!), Does-not-equal (!==)</li>
+            </ul>
+          <li>Conditionals: code structures used to test if an expression returns true or not.  Often in an (if...else).</li>
+          <li>Functions: way of packaging functionality you wish to reuse. A set of instructions that tell computer how to perform a certain tast.</li>
+            <ul>
+              <li>These do not automatically execute when .js is run.  You need to tell it to run.</li>
+            </ul>
+          <li>Control Flow is the order in which a computer executes code in a script.  Top to bottom.  First to last.</li>
         </ul>
       </section>
     </main>
